<resources>
    <string name="app_name">UCEKU Study</string>
    <string name="menu_string">Menu string</string>
    <string name="openDrawerContentDescRes">open</string>
    <string name="closeDrawerContentDescRes">close</string>
    <string name="sem1">sem1</string>
    <string name="sem2">sem2</string>
    <string name="sem3">sem3</string>
    <string name="sem4">sem4</string>
    <string name="sem5">sem5</string>
    <string name="sem6">sem6</string>
    <string name="sem7">sem7</string>
    <string name="sem8">sem8</string>
    <string name="semester">Semester</string>
    <string name="change_branch">Change Branch</string>
    <string name="saved">Saved</string>
    <string name="syllabus">Full Syllabus</string>
    <string name="contact">Contact Via Email</string>
    <string name="by">by</string>
    <string name="notes">Notes</string>
    <string name="select_your_branch">Select Your Branch</string>
    <string name="branch_image_cd">Image of the Branch</string>
    <string name="refresh">refresh</string>
    <string name="please_check_network_message">Please Check your Network Connection and Try Again</string>
    <string name="select_semester_image_contentDescription">select semester image</string>
    <string name="select_semester_info_msg">Please select your semester</string>
    <string name="fetching_courses_info_msg">Fetching Courses…</string>
    <string name="information_icon_image_view">Information Icon Image View</string>
    <string name="fetching_departments_info">Fetching Departments</string>
    <string name="no_departments_found_info">No Departments Found! Please refresh the page to fetch from server.</string>
    <string name="error_fetching_departments_from_server_info">Something went wrong while fetching departments. Please click refresh to try again.</string>
    <string name="error_fetching_courses_from_server_info">Something went wrong while fetching courses. Please click refresh to try again.</string>
    <string name="error_fetching_notes_from_server_info">Something went wrong while fetching notes. Please click refresh to try again.</string>
    <string name="title_activity_my_saved">MySavedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="back_button">Back Button</string>
    <string name="my_saved_title">Saved Content</string>
    <string name="fetching_branches">Fetching Branches…</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
